--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -96,7 +96,9 @@ body{
     display: block;
     width: 100%;
     padding-right: 24px;
-
+    &.mandatory{
+      background-color: #f2b17f;
+    }
   }
   .has-error{
     input{
