fix displaying dateselector dialog

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_dateselector.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_dateselector.scss
@@ -8,7 +8,9 @@
  */
 .ui-datepicker {
 
-  padding: 10px;
+  &.modal-body{
+    padding: 10px;
+  }
 
   > .ui-datepicker-header {
     > .ui-datepicker-title {
