fix displaying buttons in bottom of popup_dialog

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/popup_dialog.scss
@@ -160,6 +160,9 @@
     border-top: 1px solid #c0c0c0;
     background-color: transparent;
     padding: 10px;
+    button {
+      border-radius: 0;
+    }
   }
 
   .ui-resizable {
