refactor scss sources
Conflicts:
	src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
	src/Mapbender/CoreBundle/Resources/public/sass/modules/_tab_navigator.scss

--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -15,6 +15,9 @@
 @import "modules/radiobutton";
 @import "modules/dropdown";
 @import "modules/dateselector";
+@import "modules/popup_dialog";
+@import "modules/tab_navigator";
+@import "modules/result_table";
 
 /* ------------------------------------------------------------- MISC */
 .mb-hiddenCheckbox{
