--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
@@ -150,8 +150,17 @@
 
     // Tab-Navigator displaying if direct bounded to the window
     > .mapbender-element-tab-navigator {
-      > .modal-header > li > a{
-          border-top: none;
+      > ul.modal-header {
+        background-color: #B6D39E;
+        > li {
+          margin-bottom: 0px;
+          border: none;
+          margin-right: -1px;
+          > a {
+            border-top: none;
+//            border-left: 0px;
+          }
+        }
       }
     }
   }
