--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
@@ -150,8 +150,21 @@
 
     // Tab-Navigator displaying if direct bounded to the window
     > .mapbender-element-tab-navigator {
-      > .modal-header > li > a{
+      > .modal-header > li {
+        > a {
           border-top: none;
+          &:focus {
+            -webkit-transition: all 0.30s ease-in-out;
+            -moz-transition: all 0.30s ease-in-out;
+            -ms-transition: all 0.30s ease-in-out;
+            -o-transition: all 0.30s ease-in-out;
+            outline: none;
+            box-shadow: 0 0 5px #578e2a;
+          }
+        }
+        &.ui-state-active {
+          border-top: 1px solid #578e2a;
+        }
       }
     }
   }
