remove bottom panel from _popup_dialog.scss

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup_dialog.scss
@@ -174,7 +174,7 @@
     padding: 10px;
     border-bottom-left-radius: $borderRadius;
     border-bottom-right-radius: $borderRadius;
-    background-color: #E6E6E6;
+    background-color: transparent;
     //    @extend .ie-8-borders-hack;
     button {
       border-radius: 0;
