--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -36,3 +36,9 @@ $lightFontColor:#fff; // white
 // the holy colors
 $ciColor:#5b932a; // green
 $ciColor2:#4899ba; // blue
+
+// Button colors
+$buttonCriticalFirstColor: #d36565;
+$buttonCriticalSecondColor: #b23a3a;
+$buttonFirstColor: #6fb536;
+$buttonSecondColor: #5fa229;
