update mapbender icon font

--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -27,30 +27,6 @@
   }
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  font-family: 'mapbender-icons';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  text-decoration: none;
-
-  // some resets
-  width: auto;
-  height: auto;
-//  vertical-align: top;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-[class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: 'mapbender-icons' !important;
-}
-
 .iconBig {
   line-height: 20px;
   display: inline-block;
@@ -80,8 +56,6 @@
   0%{transform:rotate(0deg)}
   100%{transform:rotate(359deg)}
 }
-
-
 
 // all
 .iconCheckboxActive:before{content:"\f046" !important;} // overwrite the default icon if checked
@@ -175,48 +149,33 @@
 .iconPlay:before{content: "\f04b";}
 .iconStop:before{content: "\f04d";}
 
+
 /**
-* New icon font from iconmoon service
+* Iconmon icon font
 */
+@import "bundles/mapbendercore/fonts/icons/style";
+
+// Overload mapbender-icons load path
 @font-face {
-  $iconsPath: $iconBasePath +'/icons/icomoon';
+  $version: 'k2i9cv';
+  $iconsPath: $iconBasePath +'/icons/fonts/mapbenderer-icons';
   font-family: 'mapbender-icons';
-  src: url($iconsPath +'.eot?-dwa3cy');
-  src: url($iconsPath +'.eot?#iefix-dwa3cy') format('embedded-opentype'),
-  url($iconsPath + '.woff?-dwa3cy') format('woff'),
-  url($iconsPath + '.ttf?-dwa3cy') format('truetype'),
-  url($iconsPath + '.svg?-dwa3cy#icomoon') format('svg');
+  src: url($iconsPath +'.eot?' + $version);
+  src: url($iconsPath +'.eot?#iefix-' + $version) format('embedded-opentype'),
+  url($iconsPath + '.woff?' + $version) format('woff'),
+  url($iconsPath + '.ttf?' + $version) format('truetype'),
+  url($iconsPath + '.svg?' + $version + '#mapbender-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-.icon-layer-tree:before {
-  content: "\e607";
-}
 
-.icon-feature-info:before {
-  content: "\e608";
-}
-
-.icon-area-ruler:before {
-  content: "\e600";
-}
-
-.icon-polygone:before {
-  content: "\e601";
-}
-
-.icon-line-ruler:before {
-  content: "\e602";
-}
-
-.icon-image-export:before {
-  content: "\e603";
-}
-
-.icon-legend:before {
-  content: "\e604";
-}
-
-.icon-about:before {
-  content: "\e605";
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: 'mapbender-icons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
