--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_digitizing_tool_set.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_digitizing_tool_set.scss
@@ -1,7 +1,21 @@
-.digitizing-tool-set{
-  > button{
-    &:after{
+.digitizing-tool-set {
+  margin-top: 2px;
 
+  > button {
+
+    &:first-child{
+      margin-left: 0px;
+    }
+    margin-left: -1px;
+    padding: 3px 4px;
+    &.active,
+    &.active:focus {
+      background-color: darken($buttonSecondColor,10%);
+    }
+    &:before {
+      display: inline-block;
+      font-size: 17px;
+      padding-top: 2px;
     }
   }
 }
