extract button active color to _variables.scss

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_digitizing_tool_set.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_digitizing_tool_set.scss
@@ -10,7 +10,7 @@
     padding: 3px 4px;
     &.active,
     &.active:focus {
-      background-color: darken($buttonSecondColor,10%);
+      background-color: $buttonFirstActiveColor;
     }
     &:before {
       display: inline-block;
