--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -42,3 +42,4 @@ $buttonCriticalFirstColor: #d36565;
 $buttonCriticalSecondColor: #b23a3a;
 $buttonFirstColor: #6fb536;
 $buttonSecondColor: #5fa229;
+$buttonFirstActiveColor: #47791f;
