--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_result_table.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_result_table.scss
@@ -122,7 +122,7 @@
           float: left;
         }
         &.current {
-          background-color: #47791f !important;
+          background-color: $buttonFirstActiveColor !important;
         }
 
         &.disabled {
