improve result table styles

--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -43,3 +43,5 @@ $buttonCriticalSecondColor: #b23a3a;
 $buttonFirstColor: #6fb536;
 $buttonSecondColor: #5fa229;
 $buttonFirstActiveColor: #47791f;
+
+$selectColor: #F7F79A;
