improve button focus style

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_button.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_button.scss
@@ -16,13 +16,20 @@
   padding:($space/4) ($space/2);
   line-height:$fontSize;
   margin:0px;
+  text-decoration: none;
 
   border:1px solid darken($buttonSecondColor, 5%);
   color:$lightFontColor;
   background-color:$buttonFirstColor;
   @extend .buttonCore;
+  @include transition(all, 0.3s, ease-in-out);
+
+  outline: none;
 
   &:hover{background-color:darken($buttonFirstColor, 5%);}
+  &:focus {
+    box-shadow: 0 0 5px $buttonFirstActiveColor;
+  }
 
   &.critical{
     border:1px solid darken($buttonCriticalSecondColor, 5%);
