improve displaying check box and radio button

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -96,6 +96,12 @@ body{
       background-color: #f2b17f;
     }
   }
+
+  input[type="checkbox"],
+  input[type="radio"]{
+    margin-left: -17px;
+  }
+
   .has-error{
     input{
       border-color: #a94442;
