--- a/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
+++ b/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
@@ -1,3 +1,4 @@
 <div id="{{ id }}" class="mb-element mb-element-digitizer modal-body" title="{{ title|trans }}">
+    <div class="title"></div>
     <select class="selector"></select>
 </div>
