--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -92,8 +92,8 @@
 .iconActivity:before{content:"\f110";}
 .iconCoordinates:before{content:"\f05b";}
 .iconGpsTarget:before{content:"\f05b";}
-.iconPrev:before{content:"\f177";}
-.iconNext:before{content:"\f178";}
+.iconPrev:before{content:"\f0e2";}
+.iconNext:before{content:"\f01e";}
 .iconZoomSelect:before{content:"\f00e";}
 .iconZoomMin:before{content:"\f0ac";}
 .iconZoomIn:before{content:"\f196";}
