add mandatory color style to input[type=file]

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -67,6 +67,10 @@ body {
     &.has-error {
       > input, > select, > textarea {
         border-color: $errorColor;
+        &[type="file"] {
+          border: none;
+          color: $errorFontColor;
+        }
       }
     }
   }
