improve check forms and notify notice

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -316,6 +316,7 @@ form {
 .notifyjs-container {
   border-radius: 8px;
   box-shadow: -2px 2px 16px 0px rgba(0, 0, 0, 0.75);
+  font-size: $uiFontSize;
 
   .notifyjs-bootstrap-base {
     padding: 6px 6px 4px 25px;
