--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -45,6 +45,6 @@ $buttonSecondColor: #5fa229;
 $buttonFirstActiveColor: #47791f;
 
 $selectColor: #F7F79A;
-$mandatoryColor: #C7C25B;
+$mandatoryColor: #E49FA7;
 $warnFontColor: #B4AD2D;
 $errorFontColor: #E12F2F;
