use normalize.css from composer

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -1,5 +1,5 @@
 @import "libs/variables";
-@import "../regional/vendor/normalize.3.0.1";
+@import url("components/normalize-css/normalize.css");
 @import "libs/mixins";
 @import "libs/icons";
 @import "../fonts/opensans_regular_macroman/stylesheet";
