integrate OpenSans font as composer package nad remove old files  (#3690)

--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -6,7 +6,7 @@ $contentPatternUrl: $imageBasePath + "/content.png";
 $headPatternUrl: $imageBasePath + "/head.png";
 
 //------------------------------------------------------------------font
-$fontFamily: "open_sansregular", "Calluna Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+$fontFamily: "Open Sans", "Calluna Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 $fontSize:13px;
 $uiFontSize: 11px;
 
