--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -1,5 +1,6 @@
 @import url("components/normalize-css/normalize.css");
 @import url("components/open-sans/open-sans.css");
+@import url("components/font-awesome/css/font-awesome.min.css");
 @import "libs/variables";
 @import "libs/mixins";
 @import "libs/icons";
