--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -1,10 +1,11 @@
 @import url("components/normalize-css/normalize.css");
 @import url("components/open-sans/open-sans.css");
 @import url("components/font-awesome/css/font-awesome.min.css");
+@import url("components/bootstrap/css/bootstrap.min.css");
+
 @import "libs/variables";
 @import "libs/mixins";
 @import "libs/icons";
-@import "../regional/vendor/bootstrap/3.2.0/css/bootstrap_base";
 @import "theme/mapbender3";
 
 .glyphicon {
