move skel.html.twig from FOM to Mapbender bundle as index.html.twig

--- a/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
@@ -1,4 +1,4 @@
-{% extends "FOMCoreBundle::skel.html.twig" %}
+{% extends "MapbenderCoreBundle::index.html.twig" %}
 
 {% block css %}{% endblock %}
 
