--- a/src/Mapbender/CoreBundle/Resources/views/Template/regional/bootstrap.base.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/regional/bootstrap.base.html.twig
@@ -13,43 +13,34 @@
 
     <title>{% block title %}{% endblock %}</title>
     {% stylesheets
-    'bundles/mapbendercore/regional/vendor/normalize.3.0.1.css'
-    'bundles/mapbendercore/regional/vendor/bootstrap/3.2.0/css/bootstrap.css'
-    'bundles/mapbendercore/regional/vendor/font-awesome/4.2.0/css/font-awesome.min.css'
+    'application/web/components/normalize-css/normalize.css'
+    'application/web/components/bootstrap/css/bootstrap.min.css'
+    'application/web/components/font-awesome/css/font-awesome.min.css'
     %}<link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 
-    {% stylesheets 'bundles/mapbendercore/regional/vendor/bootstrap/3.2.0/css/bootstrap.scss' filter='cssrewrite'%}<link rel="stylesheet" href="{{ asset_url }}"/>{% endstylesheets %}
 
     {# jQuery is a fast, small, and feature-rich JavaScript library #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/jquery/jquery-1.11.1.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('components/jquery/jquery.min.js') }}" type="text/javascript"></script>
 
     {# jQuery UI is a curated set of user interface interactions, effects, widgets, and themes built on top of the jQuery JavaScript Library. Whether you're building highly interactive web applications or you just need to add a date picker to a form control, jQuery UI is the perfect choice. #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/jquery/jquery-ui-1.11.1.custom/jquery-ui.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('components/jquery-ui/jquery-ui.min.js') }}" type="text/javascript"></script>
 
     <!--[if lt IE 9]>
     {# This script is the defacto way to enable use of HTML5 sectioning elements in legacy Internet Explorer. #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/ie-hacks/html5shiv.3.7.2.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('components/html5shiv/html5shiv-built.js') }}" type="text/javascript"></script>
 
     {# A fast & lightweight polyfill for min/max-width CSS3 Media Queries (for IE 6-8, and more) #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/ie-hacks/respond.1.4.2.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('components/respond/dest/respond.min.js') }}" type="text/javascript"></script>
 
     {# Placeholders.js is a JavaScript polyfill for the HTML5 placeholder attribute.
     It's lightweight, has zero dependencies and works in pretty much any browser you can imagine. #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/ie-hacks/placeholders.3.0.2.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('components/placeholdersjs/dist/placeholders.min.js') }}" type="text/javascript"></script>
 
-    {# HTML5 Canvas for Internet Explorer. Use: window.initCanvas(canvasDomElement) #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/ie-hacks/excanvas.r3.min.js') }}" type="text/javascript"></script>
     <![endif]-->
 
-    {# Velocity is an animation engine that re-implements jQuery's $.animate() for significantly greater performance
-    (making Velocity also faster than CSS animation libraries) while including several new features. In just 9Kb zipped,
-    Velocity includes all of $.animate()'s features while packing in color animation, transforms, loops, easings, SVG support,
-    and scrolling. Velocity is the best of jQuery, jQuery UI, and CSS transitions combined #}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/velocity.1.1.0.min.js') }}" type="text/javascript"></script>
-
     {# Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.#}
-    <script src="{{ asset('bundles/mapbendercore/regional/vendor/bootstrap/3.2.0/js/bootstrap.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('components/bootstrap/js/bootstrap.min.js') }}" type="text/javascript"></script>
 
     <script type="text/javascript">
         window.initCanvas = function (canvas) {
