--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -48,7 +48,13 @@
                 </div>
                 <div class="clearContainer"></div>
                 <div id="extra_fields"></div>
-                <div class="clearContainer"></div>
+                <div class="clearContainer"></div>  
+                {% if configuration.legend == 1 %}
+                    <div class="checkWrapper left iconCheckbox iconCheckboxActive " data-icon="iconCheckbox">
+                        <input class="checkbox" type="checkbox" name="printLegend" value="1" checked="checked">
+                    </div>
+                    <label class="labelCheck">{{ 'mb.core.printclient.label.legend' | trans }}</label>
+                {% endif %}
                 <div id="layers"></div>
                 <input type="submit" style="display: none"/>
                 <div class="clearContainer"></div>
