--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/printclient.html.twig
@@ -11,6 +11,8 @@
     <div class="clearContainer"></div>
     {{ form_widget(form.configuration.rotatable) }}<label for="{{form.configuration.rotatable.vars.id}}" class="labelCheck">{{"mb.core.admin.printclient.label.rotatable"|trans}}</label>
     <div class="clearContainer"></div>
+    {{ form_widget(form.configuration.legend) }}<label for="{{form.configuration.legend.vars.id}}" class="labelCheck">{{"mb.core.admin.printclient.label.legend"|trans}}</label>
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.file_prefix) }}{{ form_widget(form.configuration.file_prefix) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.quality_levels) }}
