increased export application list size

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/export-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/export-form.html.twig
@@ -10,7 +10,7 @@
     <div class="clearContainer"></div>
     {{ form_label(form.format) }}{{ form_widget(form.format) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.applications) }}{{ form_widget(form.applications) }}
+    {{ form_label(form.applications) }}{{ form_widget(form.applications, { 'attr': { 'size': '10' }}) }}
     <div class="clearContainer"></div>
   </div>
   <div class="clearContainer"></div>
