--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/printclient.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/printclient.scss
@@ -1,9 +1,14 @@
-s
 .mb-element-printclient{
   display:none;
   overflow: visible;
 
-  .labelInput{width:80px;}
+  .labelInput{
+    width:80px;
+   }
+   label {
+    font-weight: inherit;
+    margin-bottom: inherit;
+   }
   .input, .dropdown{
     min-width:190px;
     margin-bottom:$space/2;
