fixed scss for old style forms

--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -199,3 +199,9 @@ div.notifyjs-container > div.notifyjs-bootstrap-base > span{
     }
   }
 }
+
+.popupContainer label {
+    margin-bottom: 0;
+    font-weight: normal;
+    line-height: inherit;
+}
