fixed search router table scss

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
@@ -1,10 +1,11 @@
-
 $searchRouterInputWidth:100%;
 .mb-element-searchrouter{
   display: block;
 
   .labelInput{
     width:90px;
+    font-weight: normal;
+    margin-bottom: 0;
     /*float:left;*/
   }
   .dropdown, .input{
