--- a/src/Mapbender/PrintBundle/Resources/views/Element/imageexport.html.twig
+++ b/src/Mapbender/PrintBundle/Resources/views/Element/imageexport.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-imageexport" style="display: none;" title="{{ title|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-imageexport" title="{{ title|trans }}">
   <p>{{ 'mb.print.imageexport.chooseformat'| trans }}</p>
   <input type="radio" value="png" name="imageformat" checked>PNG<br>
   <input type="radio" value="jpeg" name="imageformat">JPG
