made components list bigger

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/zoombar.html.twig
@@ -7,7 +7,7 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.components) }}{{ form_widget(form.configuration.components) }}
+    {{ form_label(form.configuration.components) }}{{ form_widget(form.configuration.components, { 'attr': { 'size': '6' } }) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
