--- a/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
+++ b/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
@@ -20,7 +20,20 @@
 
   .mapbender-element-result-table {
     margin-top: 10px;
+        
+        // Row higlight by feature select
+        table.dataTable > tbody > tr{
+            
+            &.odd,&.even{
+                &.hover td{
+                    background-color: #F7F79A;
   }
+                &:hover td{
+                    background-color: #F7F79A;
+                }
+            }
+        }
+    }
 
 }
 
