--- a/src/Mapbender/CoreBundle/Resources/views/Element/htmlelement.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/htmlelement.html.twig
@@ -1,3 +1,3 @@
-<div id="{{ id }}" class="mb-element mb-element-htmlelement {{ configuration.classes }}">
+<div id="{{ id }}" class="mb-element mb-element-htmlelement {{ configuration.classes }}" data-title="{{ entity.title }}">
     {{ include(template_from_string(configuration.content)) }}
 </div>
